Connected ReactJS to project and wrote example of creating component with controller such as Admin

--- a/.gitignore
+++ b/.gitignore
@@ -210,4 +210,20 @@ fabric.properties
 .idea/**/markdown-navigator.xml
 .idea/**/markdown-navigator/
 
-# End of https://www.gitignore.io/api/ruby,rails,rubymine
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+/node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+
+# End of https://www.gitignore.io/api/ruby,rails,rubymine,react
