--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
   "name": "restaurant_rails_app",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/preset-react": "^7.8.3",
     "@rails/webpacker": "4.2.2",
+    "@version/react-router-v3": "^1.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "bootstrap": "^4.4.1",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react_ujs": "^2.6.1"
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react_ujs": "^2.6.1",
+    "reactstrap": "^8.4.1",
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
