--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@version/react-router-v3": "^1.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.4.1",
+    "html-react-parser": "^0.10.2",
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.16.0",
     "prop-types": "^15.7.2",
