--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,11 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
-      run: bundle exec rspec
+      run: |
+        apt-get update -qq
+        curl -sL https://deb.nodesource.com/setup_13.x | bash
+        apt-get install -y nodejs postgresql-client
+        npm install -g yarn
+        bundle install
+        yarn install --ignore-engines
+        bundle exec rspec
